--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <title>About Vaida</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:400,900|Sourse+Sans+Pro:300,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- Header -->
     <header>
         <div class="logo">
-            <img src="img/logo.png" alt="">
+            <img src="#" alt="">
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
@@ -29,10 +32,10 @@
     <!-- Introduction -->
     <section class="intro" id="home">
         <h1 class="section__title section__title--intro">
-           Hi, I am <strong>Vaida Eidžiulytė-Grauslienė</strong>
+           Hi, I am <strong>Vaida</strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro">Full-stack dev</p>
-        <img src="img/vaida.jpg" alt="a picture of Vaida" width="20%" height="20%">
+        <img src="img/vaida.jpg" alt="a picture of Vaida" class="intro__img">
     </section>
     <!-- My services -->
     <section class="my-services" id="services">
