About me, my work and footer style

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1 class="section__title section__title--intro">
            Hi, I am <strong>Vaida</strong>
         </h1>
-        <p class="section__subtitle section__subtitle--intro">Full-stack dev</p>
+        <p class="section__subtitle section__subtitle--intro">WEB developer</p>
         <img src="img/vaida.jpg" alt="a picture of Vaida" class="intro__img">
     </section>
     <!-- My services -->
@@ -59,17 +59,17 @@
     <!-- About me -->
     <section class="about-me" id="about">
         <h2 class="section__title section__title--about">Who I am</h2>
-        <p class="section__subtitle section__subtitle--about">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p class="section__subtitle section__subtitle--about">Lorem, ipsum dolor.</p>
         <div class="about-me__body">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus, perspiciatis.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis saepe voluptatem necessitatibus. Aperiam, vero culpa?</p>
         </div>
-        <img src="img/vaida2.jpg" alt="one more picture of Vaida" width="20%" height="20%">
+        <img src="img/vaida2.jpg" alt="one more picture of Vaida" class="about-me__img">
     </section>
     <!-- My work -->
     <section class="my-work" id="work">
         <h2 class="section__title">My work</h2>
-        <p class="section__subtitle"></p>
+        <p class="section__subtitle">Some of my websites examples</p>
         <div class="portfolio">
             <!-- Portfolio item 01 -->
             <a href="#" class="portfolio__item">
@@ -98,12 +98,18 @@
         </div>
     </section>
     <!-- Footer -->
-    <footer>
-        <a href="mailto:grausliene.vaida@gmail.com" class="footer-link">grausliene.vaida@gmail.com</a>
+    <footer class="footer">
+        <a href="mailto:grausliene.vaida@gmail.com" class="footer__link">grausliene.vaida@gmail.com</a>
         <ul class="social-list">
-            <li class="social-list__item"><a class="social-list__link">a</a></li>
-            <li class="social-list__item"><a class="social-list__link">b</a></li>
-            <li class="social-list__item"><a class="social-list__link">c</a></li>
+            <li class="social-list__item">
+                <a href="https://github.com/VaidaEG" target="_blank" class="social-list__link"><i class="fab fa-github"></i></a>
+            </li>
+            <li class="social-list__item">
+                <a href="https://www.linkedin.com/in/vaida-eid%C5%BEiulyt%C4%97-grauslien%C4%97-627336151/" target="_blank" class="social-list__link"><i class="fab fa-linkedin"></i></a>
+            </li>
+            <li class="social-list__item">
+                <a href="https://www.facebook.com/vaida.eidziulytegrausliene" class="social-list__link" target="_blank"><i class="fab fa-facebook"></i></a>
+            </li>
         </ul>
     </footer>
 </body>
